--- a/CHARLIE.html
+++ b/CHARLIE.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>CHARLIE PUTH | Voicenotes | Fan made website</title>
+    <title>CHARLIE PUTH | CHARLIE | Fan made website</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -71,7 +71,8 @@
             <!-- Inner -->
             <div class="inner">
                 <header>
-                    <img style="width: 20rem;" src="images/Voicenotes-desktop.gif" alt="" id="logo">
+                    <!-- <img id="logo" style="width: 20rem;" src="images/CharliePuthoneline-White.gif" alt=""> -->
+                    <img style="width: 20rem;" src="images/Charlie.gif" alt="" id="logo">
                 </header>
             </div>
 
@@ -120,15 +121,15 @@
         <div style="background-color:black;">
 
             <div style="text-align: center; background-color: black;">
-                <h3 class="text-gray-100 text-lg py-px">1.Charlie Puth - The Way I Am [Official Video]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/EQnk-h-LCpQ"
-                    title="YouTube video player" frameborder="0"
+                <h3 class="text-gray-100 text-lg py-px">1.Charlie Puth - That's Hilarious [Official Video]</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/Nq3x1AkwgpY"
+                    title="Charlie Puth - That's Hilarious [Official Video]" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -136,34 +137,15 @@
             </div>
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">2.Charlie Puth - Attention [Official Video]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/nfs8NYg7yQM"
-                    title="YouTube video player" frameborder="0"
+                <h3 class="text-gray-100 text-lg py-px">2.Charlie Puth - Charlie Be Quiet! (Official Audio)</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/vo_XZmKlJ3A"
+                    title="Charlie Puth - Charlie Be Quiet! (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
-                        <button class="getitnow">
-                            <span>GET IT NOW</a></span>
-                    </button>
-                </div>
-            </div>
-
-
-
-
-            <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">3.Charlie Puth - LA Girls [Official Audio]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/iW3Than5jrs"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-
-                <div style="text-align: center; margin-top: 1%; margin: auto;">
-
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -174,15 +156,15 @@
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">4.Charlie Puth - "How Long" [Official Video]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/CwfoyVa980U"
-                    title="YouTube video player" frameborder="0"
+                <h3 class="text-gray-100 text-lg py-px">3.Charlie Puth - Light Switch [Official Music Video]</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/WFsAon_TWPQ"
+                    title="Charlie Puth - Light Switch [Official Music Video]" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -193,16 +175,16 @@
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">5.Charlie Puth - Done For Me (feat. Kehlani) [Official Video]
-                </h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/TdyllLZeviY"
-                    title="YouTube video player" frameborder="0"
+                <h3 class="text-gray-100 text-lg py-px">4.Charlie Puth - There's A First Time For Everything (Official
+                    Audio)</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/9mzSgnOxXtw"
+                    title="Charlie Puth - There's A First Time For Everything (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -213,15 +195,15 @@
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">6.Charlie Puth - Patient [Official Audio]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/uKmA0nHe4no"
-                    title="YouTube video player" frameborder="0"
+                <h3 class="text-gray-100 text-lg py-px">5.Charlie Puth - Smells Like Me (Official Audio)</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/KyBHXjh0mzo"
+                    title="Charlie Puth - Smells Like Me (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -232,18 +214,37 @@
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">7.Charlie Puth - If You Leave Me Now (feat. Boyz II Men)
-                    [Official
+                <h3 class="text-gray-100 text-lg py-px">6.Charlie Puth - Left And Right (feat. Jung Kook of BTS)
+                    [Official Video]</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/a7GITgqwDVg"
+                    title="Charlie Puth - Left And Right (feat. Jung Kook of BTS) [Official Video]" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
+                <div style="text-align: center; margin-top: 1%; margin: auto;">
+
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
+                        <button class="getitnow">
+                            <span>GET IT NOW</a></span>
+                    </button>
+                </div>
+            </div>
+
+
+
+
+            <div style="text-align: center; background-color: black; margin-top: 1%;">
+                <h3 class="text-gray-100 text-lg py-px">7.Charlie Puth - Loser (Official Music Video)
                     Audio]
                 </h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/mBrdEYW0Vno"
-                    title="YouTube video player" frameborder="0"
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/Sp6BS-rSr98"
+                    title="Charlie Puth - Loser (Official Music Video)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -254,15 +255,15 @@
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">8.Charlie Puth - BOY [Official Audio]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/iILJvqrAQ_w"
-                    title="YouTube video player" frameborder="0"
+                <h3 class="text-gray-100 text-lg py-px">8.Charlie Puth - When You're Sad I'm Sad (Official Audio)</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/pcqUZMgMnVM"
+                    title="Charlie Puth - When You're Sad I'm Sad (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -273,15 +274,15 @@
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">9.Charlie Puth - Slow It Down [Official Audio]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/JFVtb5_Pec4"
-                    title="YouTube video player" frameborder="0"
+                <h3 class="text-gray-100 text-lg py-px">9.Charlie Puth - Marks On My Neck (Official Audio)</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/Ibx6cg2vTMk"
+                    title="Charlie Puth - Marks On My Neck (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -292,16 +293,35 @@
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">10.Charlie Puth - Change (feat. James Taylor) [Official Audio]
+                <h3 class="text-gray-100 text-lg py-px">10.Charlie Puth - Tears On My Piano (Official Audio)</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/kX6wgd9QUxw"
+                    title="Charlie Puth - Tears On My Piano (Official Audio)" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
+                <div style="text-align: center; margin-top: 1%; margin: auto;">
+
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
+                        <button class="getitnow">
+                            <span>GET IT NOW</a></span>
+                    </button>
+                </div>
+            </div>
+
+
+
+
+            <div style="text-align: center; background-color: black; margin-top: 1%;">
+                <h3 class="text-gray-100 text-lg py-px">11.Charlie Puth - I Don't Think That I Like Her (Official Audio)
                 </h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/e9XbKS9xWD0"
-                    title="YouTube video player" frameborder="0"
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/9voN0gkdlS4"
+                    title="Charlie Puth - I Don't Think That I Like Her (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -312,53 +332,15 @@
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">11.Charlie Puth - Somebody Told Me [Official Audio]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/uIpZY56noT8"
-                    title="YouTube video player" frameborder="0"
+                <h3 class="text-gray-100 text-lg py-px">12.Charlie Puth - No More Drama (Official Audio)</h3>
+                <iframe width="100%" height="498" src="https://www.youtube.com/embed/dFU2X5CFp5I"
+                    title="Charlie Puth - No More Drama (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
-                        <button class="getitnow">
-                            <span>GET IT NOW</a></span>
-                    </button>
-                </div>
-            </div>
-
-
-
-
-            <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">12.Charlie Puth - Empty Cups [Official Audio]]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/WTjddKXBNwQ"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-
-                <div style="text-align: center; margin-top: 1%; margin: auto;">
-
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
-                        <button class="getitnow">
-                            <span>GET IT NOW</a></span>
-                    </button>
-                </div>
-            </div>
-
-
-
-
-            <div style="text-align: center; background-color: black; margin-top: 1%;">
-                <h3 class="text-gray-100 text-lg py-px">13.Charlie Puth - Through It All [Official Audio]</h3>
-                <iframe width="100%" height="480" src="https://www.youtube.com/embed/t62zPl44H4I"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-
-                <div style="text-align: center; margin-top: 1%; margin: auto;">
-
-                    <a href="https://atlantic.lnk.to/VoicenotesAW" target="_blank">
+                    <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
@@ -366,6 +348,8 @@
             </div>
 
         </div>
+
+
 
 
         <!-- footer -->
