--- a/liveevents.html
+++ b/liveevents.html
@@ -48,6 +48,8 @@
 									<li><a href="single.html">Singles & Others</a></li>
 									<li><a href="hard-on-your-self.html">Hard On Yourself</a></li>
 									<li><a href="girlfriend.html">Girlfriend</a></li>
+									<li><a href="free.html">Free</a></li>
+									<li><a href="ihope.html">I hope</a></li>
 									<li><a href="mother.html">Mother</a></li>
 									<li><a href="cheating-on-you.html">Cheating On You</a></li>
 									<li><a href="i-warned-myself.html">I Warned Myself</a></li>
@@ -72,6 +74,10 @@
 				<img style=" margin: auto;" src="cpphotos/CHARLIE_PUTH_LOGO.png" alt="CHARLIE PUTH">
 			</div>
 			<h2 id="l">LIVE EVENTS</h2>
+			<iframe width="100%" height="808" src="https://www.youtube.com/embed/esQkDFa3nyE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+			<iframe width="100%" height="480" src="https://www.youtube.com/embed/dQulvRTuyW4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 			<iframe width="100%" height="480" src="https://www.youtube.com/embed/fEi7m30JhfE"
 				title="YouTube video player" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
