--- a/thatshilarious.html
+++ b/thatshilarious.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>CHARLIE PUTH | Light Switch | Fan made website</title>
+	<title>CHARLIE PUTH | That's Hilarious | Fan made website</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -71,7 +71,7 @@
 			<!-- Inner -->
 			<div class="inner">
 				<header>
-					<h1><a href="#" id="logo">Light Switch</a></h1>
+					<h1><a href="#" id="logo">That's Hilarious</a></h1>
 				</header>
 			</div>
 
@@ -119,21 +119,20 @@
 
 
 		<div style="text-align: center; background-color: black;">
-			<h3 class="text-gray-100 text-lg py-px">[1] Charlie Puth - Light Switch [Official Video]</h3>
-			<iframe width="100%" height="480" src="https://www.youtube.com/embed/WFsAon_TWPQ"
+			<h3 class="text-gray-100 text-lg py-px">1.Charlie Puth - That's Hilarious [Official Video]</h3>
+			<iframe width="100%" height="480" src="https://www.youtube.com/embed/Nq3x1AkwgpY"
 				title="YouTube video player" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 
 			<div style="text-align: center; margin-top: 1%; margin: auto;">
 
-				<a href="https://charlieputh.lnk.to/LightSwitchAW" target="_blank">
+				<a href="https://charlieputh.lnk.to/ThatsHilariousID" target="_blank">
 					<button class="getitnow">
 						<span>GET IT NOW</a></span>
 				</button>
 			</div>
 		</div>
-
 
 
 
