--- a/writen-by-CP.html
+++ b/writen-by-CP.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>CHARLIE PUTH | Light Switch | Fan made website</title>
+	<title>CHARLIE PUTH | Home | Fan made website</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -69,45 +69,45 @@
 		<div id="header">
 
 			<!-- Inner -->
-			<div class="inner">
+			<!-- <div class="inner">
 				<header>
-					<h1><a href="#" id="logo">Light Switch</a></h1>
+					<h1><a href="#" id="logo">Written By Charlie Puth</a></h1>
 				</header>
-			</div>
+			</div> -->
 
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="charlieputhbio.html">Bio</a></li>
+					<!-- <li><a href="charlieputhbio.html">Bio</a></li> -->
 					<li>
-						<a href="#">Music + Video</a>
-						<ul>
-							<li><a href="musicvideo.html">Music + Video</a></li>
+						<a href="musicvideo.html">Music + Video</a>
+						<!-- <ul>
+                            <li><a href="musicvideo.html">Music + Video</a></li>
 
-							<li>
-								<a href="#">Albums &#8594;</a>
+                            <li>
+                                <a href="#">Albums &#8594;</a>
 
-								<ul>
-									<li><a href="CHARLIE.html">CHARLIE</a></li>
-									<li><a href="leftandright.html">Left And Right (feat. Jung Kook of BTS)</a></li>
-									<li><a href="thatshilarious.html">That's Hilarious</a></li>
-									<li><a href="lightswitch.html">Light Switch</a></li>
-									<li><a href="hard-on-your-self.html">Hard On Yourself</a></li>
-									<li><a href="girlfriend.html">Girlfriend</a></li>
-									<li><a href="free.html">Free</a></li>
-									<li><a href="ihope.html">I hope</a></li>
-									<li><a href="mother.html">Mother</a></li>
-									<li><a href="cheating-on-you.html">Cheating On You</a></li>
-									<li><a href="i-warned-myself.html">I Warned Myself</a></li>
-									<li><a href="see-you-again.html">See You Again</a></li>
-									<li><a href="voicenotes.html">Voicenotes</a></li>
-									<li><a href="ninetrackmind.html">Nine Track Mind (Deluxe)</a></li>
-									<li><a href="sometypeoflove.html">Some Type Of Love EP</a></li>
-									<li><a href="other.html">Other Albums</a></li>
-								</ul>
-							</li>
-						</ul>
+                                <ul>
+                                    <li><a href="CHARLIE.html">CHARLIE</a></li>
+                                    <li><a href="leftandright.html">Left And Right (feat. Jung Kook of BTS)</a></li>
+                                    <li><a href="thatshilarious.html">That's Hilarious</a></li>
+                                    <li><a href="lightswitch.html">Light Switch</a></li>
+                                    <li><a href="hard-on-your-self.html">Hard On Yourself</a></li>
+                                    <li><a href="girlfriend.html">Girlfriend</a></li>
+                                    <li><a href="free.html">Free</a></li>
+                                    <li><a href="ihope.html">I hope</a></li>
+                                    <li><a href="mother.html">Mother</a></li>
+                                    <li><a href="cheating-on-you.html">Cheating On You</a></li>
+                                    <li><a href="i-warned-myself.html">I Warned Myself</a></li>
+                                    <li><a href="see-you-again.html">See You Again</a></li>
+                                    <li><a href="voicenotes.html">Voicenotes</a></li>
+                                    <li><a href="ninetrackmind.html">Nine Track Mind (Deluxe)</a></li>
+                                    <li><a href="sometypeoflove.html">Some Type Of Love EP</a></li>
+                                    <li><a href="other.html">Other Albums</a></li>
+                                </ul>
+                            </li>
+                        </ul> -->
 					</li>
 					<li><a href="writen-by-CP.html">Written By Charlie Puth</a></li>
 					<li><a href="https://www.charlieputh.com/" target="_blank">charlieputh.com</a>
@@ -117,24 +117,13 @@
 
 		</div>
 
+		<iframe id='AmazonMusicEmbedB09JGFW84S'
+			src='https://music.amazon.in/embed/B09JGFW84S/?id=4PtNhhIHK5&marketplaceId=A3K6Y4MI8GDYMT&musicTerritory=IN'
+			width='100%' height='3650px' style="border:0px solid rgba(0, 0, 0, 0.12);"></iframe>
 
-		<div style="text-align: center; background-color: black;">
-			<h3 class="text-gray-100 text-lg py-px">[1] Charlie Puth - Light Switch [Official Video]</h3>
-			<iframe width="100%" height="480" src="https://www.youtube.com/embed/WFsAon_TWPQ"
-				title="YouTube video player" frameborder="0"
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
-
-			<div style="text-align: center; margin-top: 1%; margin: auto;">
-
-				<a href="https://charlieputh.lnk.to/LightSwitchAW" target="_blank">
-					<button class="getitnow">
-						<span>GET IT NOW</a></span>
-				</button>
-			</div>
-		</div>
-
-
+		<iframe src="https://open.spotify.com/embed/playlist/05p6ISeMzQo37aChgZxTYk?utm_source=generator&theme=0"
+			width="100%" height="2100" frameBorder="0" allowfullscreen=""
+			allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 
 		<!-- footer -->
