--- a/ihope.html
+++ b/ihope.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>CHARLIE PUTH | Hard On Yourself | Fan made website</title>
+  <title>CHARLIE PUTH | I Hope | Fan made website</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -71,7 +71,7 @@
       <!-- Inner -->
       <div class="inner">
         <header>
-          <h1><a href="#" id="logo">Hard On Yourself</a></h1>
+          <h1><a href="#" id="logo">I Hope</a></h1>
         </header>
       </div>
 
@@ -117,22 +117,13 @@
 
     </div>
 
-
     <div style="text-align: center; background-color: black;">
-      <h3 class="text-gray-100 text-lg py-px">1.Charlie Puth & blackbear - Hard On Yourself [Official Audio]</h3>
-      <iframe width="100%" height="480" src="https://www.youtube.com/embed/bRAS8T6j3pM" title="YouTube video player"
+      <h3 class="text-gray-100 text-lg py-px">1.Gabby Barrett - I Hope (ft. Charlie Puth) (Audio)</h3>
+      <iframe width="100%" height="480" src="https://www.youtube.com/embed/fDFdVIp6rHg" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
 
-      <div style="text-align: center; margin-top: 1%; margin: auto;">
-
-        <a href="https://charlieputh.lnk.to/HardOnYourselfAW" target="_blank">
-          <button class="getitnow">
-            <span>GET IT NOW</a></span>
-        </button>
-      </div>
     </div>
-
 
 
     <!-- footer -->
