--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>CHARLIE PUTH | THE UNIVERSAL DEV</title> 
+    <title>CHARLIE PUTH | THE UNIVERSAL DEV</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -143,8 +143,8 @@
         </section> -->
 
         <div style="background-color: black;">
+            <img class="homeimg" src="images/cassetteimg.jpg" alt="img charlie puth">
             <img class="homeimg" src="images/charlie1500x500.jpg" alt="img charlie puth">
-            <img class="homeimg" src="images/leftandright.jpg" alt="img charlie puth">
             <!-- <img class="homeimg" src="cpphotos/thatshilariousbig.jpg" alt="img charlie puth"> -->
         </div>
 
@@ -211,15 +211,15 @@
             </div>
         </div>
 
-
-
-        <div style="background-color: black ; text-align: center;">
-            <h2 style="color: white;font-weight: 200; font-size: 2rem;">CHARLIE The Album</h2>
+        <iframe width="100%" height="800" src="https://www.youtube.com/embed/PAKFzFqJa58" title="CHARLIE PUTH - THAT&#39;S NOT HOW THIS WORKS (FEAT. DAN + SHAY) [official music video]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="100%" height="720" src="https://www.youtube.com/embed/Iwbo_nzCMY8" title="CHARLIE PUTH - THAT&#39;S NOT HOW THIS WORKS (short film)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div style="background-color: black ; text-align: center; ">
+            <!-- <h2 style="color: white;font-weight: 200; font-size: 2rem;">CHARLIE The Album</h2> -->
             <div class="flex flex-col items-center">
                 <img style="width: 30rem;" class="flex m-1" src="images/Charlie.gif" />
             </div>
 
-            <a href="CHARLIE.html" target="_blank">
+            <a href="CHARLIE.html">
                 <button class="getitnow">
                     <span>LISTEN NOW</a></span>
         </div>
