--- a/musicvideo.html
+++ b/musicvideo.html
@@ -249,6 +249,15 @@
 
         <div class="grid grid-cols-1 gap-y-10 sm:grid-cols-2 gap-x-6 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
 
+          <a href="https://charlieputh.lnk.to/ThatsNotHowThisWorksID" target="_blank" class="group">
+            <div
+              class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
+              <img src="cpphotos/tnhtw.jpg" alt="Person using a pen to cross a task off a productivity paper card."
+                class="w-full h-full object-center object-cover group-hover:opacity-75">
+            </div>
+            <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
+            <p class="mt-1 text-lg font-medium text-gray-100">That's Not How This Works</p>
+          </a>
           <a href="https://charlieputh.lnk.to/HardOnYourselfAW" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
