--- a/musicvideo.html
+++ b/musicvideo.html
@@ -248,7 +248,15 @@
         <!-- <h2 style="margin: auto; font-size: 2rem; text-align: center; color: white;">Albums</h2> -->
 
         <div class="grid grid-cols-1 gap-y-10 sm:grid-cols-2 gap-x-6 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-
+          <a href="https://charlieputh.lnk.to/TNHTWSabrinasVersion!PA" target="_blank" class="group">
+            <div
+              class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
+              <img src="images/tnhtw-sabrina's-version.webp" alt="Person using a pen to cross a task off a productivity paper card."
+                class="w-full h-full object-center object-cover group-hover:opacity-75">
+            </div>
+            <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
+            <p class="mt-1 text-lg font-medium text-gray-100">That's Not How This Works (feat. Dan + Shay & Sabrina Carpenter) [Sabrina's Version]</p>
+          </a>
           <a href="https://charlieputh.lnk.to/ThatsNotHowThisWorksID" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -256,8 +264,9 @@
                 class="w-full h-full object-center object-cover group-hover:opacity-75">
             </div>
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
-            <p class="mt-1 text-lg font-medium text-gray-100">That's Not How This Works</p>
+            <p class="mt-1 text-lg font-medium text-gray-100">THAT'S NOT HOW THIS WORKS (FEAT. DAN + SHAY)</p>
           </a>
+
           <a href="https://charlieputh.lnk.to/HardOnYourselfAW" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
